add amezon link to the site

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       name="google-site-verification"
       content="OwWzbbATB01ZOgXMZqrJZfwoP_R8WBth4lhOlU1Wq2o"
     />
+    <meta name="author" content="Vishal Maske" />
     <title>Vishal Maske - Full Stack Web Developer</title>
     <!-- bootstrap link to connect  -->
     <link
@@ -84,6 +85,11 @@
       <section id="home" class="background-image">
         <div class="row container m-sm-auto">
           <div class="col-12 col-sm-6 home-content">
+            <div class="amezon-links">
+              <a href="https://amzn.to/3OaMng2" target="_blank"
+                >GET YOUR PRODUCT</a
+              >
+            </div>
             <h1 class="mb-sm-5">
               Hi, I’m
               <strong style="color: #1788ae">Vishal Maske </strong>, a Full
